# hack-vision-es

./: .gitignore  index.html  package.json  pnpm-lock.yaml
api-vision/: .env.example  README.md  pyproject.toml
api-vision/app/: __init__.py  config.py  main.py  models.py
api-vision/app/routers/: detect.py  pose.py  segment.py  stream.py
api-vision/app/schemas/: detection.py  pose.py  segmentation.py
api-vision/app/utils/: image.py
app-vision/: .npmrc  package.json  pnpm-lock.yaml  tailwind.config.ts
app-vision/app/: globals.css  layout.tsx  page.tsx
app-vision/components/: DetectionCanvas.tsx  DetectionPanel.tsx  ModelSelector.tsx  StatusBar.tsx
app-vision/hooks/: useCamera.ts  useWebSocket.ts
app-vision/types/: detection.ts
src/: App.jsx  index.css
src/components/: Camera.jsx  Countdown.jsx  GameHeader.jsx  GameShell.jsx  MaletinOverlay.jsx  PenaltyOverlay.jsx  PlayerAvatar.jsx  PlayerPanel.jsx  PlayerSelect.jsx  ResultOverlay.jsx  TwerkingChallenge.tsx
src/config/: players.js
src/hooks/: useBombFlash.js  useCatchRainGame.js  useGameFlow.js  useGestureRecognizer.js  useHolisticPenalty.js  useOperacionMaletin.js  usePenaltyGame.js  usePose.ts  useRpsDetection.js
src/tiebreakers/: README.md  billeteCatch.js  cazaSobres.js  createStub.js  operacionMaletin.js  registry.js  twerkingChallenge.js  types.js
src/utils/: assignPlayers.js  captureGestures.js  drawLandmarks.js  drawVision.js  gameEngine.ts  gameLogic.js  gameSfx.js  grabDetection.js  handStability.js  landmarksAdapter.js  loadTaskModel.js  overlays.ts  playerFaceOverlay.js  (+4 more)
(+4 files in other folders)
